--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+server.port=8081
 
+
+#Indica que a informacao sera armazenada em memoria(padrao)
+#spring.datasource.url=jdbc:h2:mem:cruddb
+#Indica que a informacao sera armazenada em D:/cruddb
+spring.datasource.url=jdbc:h2:file:D:/cruddb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=123456
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url= jdbc:sqlserver://localhost;databaseName=cruddb;encrypt=true;trustServerCertificate=true;
+##spring.datasource.url= jdbc:sqlserver://localhost;databaseName=cruddb;
+#spring.datasource.username=sa
+#spring.datasource.password=@ITB123456
+#
+#spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
+
+
+#Indica que as tabelas serao criadas caso nao existam ou caso tenham sua estrutura alterada
+spring.jpa.hibernate.ddl-auto= update
+#Para mostrar as consultas no console
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
